--- a/_github/workflows/FreeBSD.yml
+++ b/_github/workflows/FreeBSD.yml
@@ -1,22 +1,22 @@
-name: Solaris
+name: FreeBSD
 on:
   push:
     branches:
       - '*'
     paths:
       - '*.sh'
-      - '.github/workflows/Solaris.yml'
+      - '_github/workflows/FreeBSD.yml'
 
   pull_request:
     branches:
       - dev
     paths:
       - '*.sh'
-      - '.github/workflows/Solaris.yml'
+      - '_github/workflows/FreeBSD.yml'
 
 
 jobs:
-  Solaris:
+  FreeBSD:
     strategy:
       matrix:
         include:
@@ -49,13 +49,15 @@ jobs:
       run: echo "TestingDomain=${{steps.tunnel.outputs.server}}" >> $GITHUB_ENV
     - name: Clone acmetest
       run: cd .. && git clone https://github.com/acmesh-official/acmetest.git  && cp -r acme.sh acmetest/
-    - uses: vmactions/solaris-vm@v0.0.5
+    - uses: vmactions/freebsd-vm@v0.1.5
       with:
         envs: 'TEST_LOCAL TestingDomain TEST_ACME_Server CA_ECDSA CA CA_EMAIL TEST_PREFERRED_CHAIN'
         nat: |
           "8080": "80"
-        prepare: pkgutil -y -i socat curl
+        prepare: pkg install -y socat curl
+        usesh: true
         run: |
           cd ../acmetest \
           && ./letest.sh
+
 
